<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/review_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_corner_cut_stroke">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_prompt_title"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                android:textSize="15sp" />

        <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@android:color/black"
                android:text="@string/review_prompt_description"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:id="@+id/negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/review_prompt_negative_text"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/positive_button"
                android:minHeight="0dp"
                style="?attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/already_reviewed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:text="@string/review_prompt_already_reviewed"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/positive_button"
                android:minHeight="0dp"
                style="?attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/review_prompt_positive_text"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:minHeight="0dp"
                style="?attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/thanks_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:text="@string/close"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:minHeight="0dp"
                style="?attr/borderlessButtonStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>